[tool.poetry]
name = "pandora-cas"
version = "0.0.5"
description = "Pandora Car Alarm System clientside API implementation"
authors = ["Alexander Ryazanov <alryaz@alryaz.com>"]
readme = "README.md"
license = "MIT"
keywords = ["pandora", "car", "alarm", "system", "alarmtrade"]
homepage = "https://github.com/alryaz/python-pandora-cas"
repository = "https://github.com/alryaz/python-pandora-cas"
documentation = "https://github.com/alryaz/python-pandora-cas"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
packages = [
  { include = "pandora_cas", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/alryaz/python-pandora-cas/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
